Closed Bug 724584 Opened 14 years ago Closed 14 years ago

ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr' in imgRequest::Init

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: mak, Assigned: joe)

Details

Attachments

(1 file)

xul.dll!nsCOMPtr<nsIRequest>::Assert_NoQueryNeeded() Line 532 + 0x2a bytes C++ xul.dll!nsCOMPtr<nsIRequest>::operator=(nsIRequest * rhs) Line 653 C++ xul.dll!imgRequest::Init(nsIURI * aURI, nsIURI * aCurrentURI, nsIRequest * aRequest, nsIChannel * aChannel, imgCacheEntry * aCacheEntry, void * aLoadId, nsIPrincipal * aLoadingPrincipal, int aCORSMode) Line 162 C++ xul.dll!imgCacheValidator::OnStartRequest(nsIRequest * aRequest, nsISupports * ctxt) Line 2211 C++ The JS Stack ends with PageThumbsProtocol.js::Channel_startRequest Joe thinks it's due to the third argument here that should be aRequest and not the channel. http://mxr.mozilla.org/mozilla-central/source/image/src/imgLoader.cpp#2207
Attached patch use nsIRequestSplinter Review
I'm pretty sure that just using inheritance breaks XPCOM rules; luckily, we have this existing nsIRequest lying around.
Attachment #594745 - Flags: review?(jmuizelaar)
Attachment #594745 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Keywords: checkin-needed
Target Milestone: --- → mozilla13
Version: 13 Branch → Trunk
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: