Bug 724584: Pass in aRequest as an nsIRequest* (instead of an nsIChannel*) in mgRequest::Init. r=jrmuizel